# awe

./: .gitignore  Makefile  README.md  pyproject.toml
backend/: .env.example  pyproject.toml
backend/src/awe/: cli.py
backend/src/awe/api/: app.py  deps.py  schemas.py  server.py
backend/src/awe/config/: loader.py
backend/src/awe/context/: bus.py  store.py
backend/src/awe/models/: agent.py  task.py
backend/src/awe/persistence/: db.py
backend/src/awe/runtime/: pipeline_runtime.py
backend/tests/: conftest.py  test_api.py  test_config_loader.py  test_models.py  test_persistence.py  test_quality_gate.py
docs/plans/: 2026-03-11-agent-workflow-engine-design.md  2026-03-11-agent-workflow-engine-plan.md  2026-03-11-agent-workflow-engine-research.md  2026-03-11-awe-ui-design.md
examples/agents/: coder.yaml  researcher.yaml
examples/pipelines/: analyze-and-fix.yaml
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  main.tsx  routeTree.gen.ts
frontend/src/api/: client.ts  hooks.ts
frontend/src/components/agent/: AgentCard.tsx  AgentDrawer.tsx
frontend/src/hooks/: usePipelineFlow.ts
frontend/src/routes/: __root.tsx  agents.tsx  index.tsx  pipelines.$pipelineId.tsx  pipelines.tsx  runs.tsx  settings.tsx
frontend/src/theme/: index.ts
src/awe/: __init__.py
src/awe/context/: compressor.py
src/awe/models/: __init__.py  pipeline.py
src/awe/quality/: gate.py
src/awe/runtime/: agent_runtime.py
tests/: test_agent_review.py  test_api.py  test_compressor.py  test_config_loader.py  test_context.py
(+13 files in other folders)
